prowlarr/base/deployment.yml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "prowlarr"
spec:
  strategy:
    type: "Recreate"
  selector:
    matchLabels:
      app: "prowlarr"
  template:
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: "prowlarr"
          image: "linuxserver/prowlarr:nightly"
          imagePullPolicy: "Always" # while in development
          resources:
            limits:
              memory: "512Mi"
              cpu: "250m"
          ports:
            - containerPort: 9696
              name: "prowlarr-http"
              protocol: "TCP"
          volumeMounts:
            - mountPath: "/config"
              name: "prowlarr-config"
      volumes:
        - name: "prowlarr-config"
          persistentVolumeClaim:
            claimName: "prowlarr-config"
