prowlarr/base/service.yml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "prowlarr"
spec:
  type: "ClusterIP"
  selector:
    app: "prowlarr"
  ports:
    - port: 9696
      name: "prowlarr-http"
      protocol: "TCP"
